--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage"
   },
-  "keywords": ["mcp", "dnd", "5e", "rpg", "llm", "ai", "dm"],
+  "keywords": ["mcp", "dnd", "5e", "rpg", "llm", "ai", "dm", "chatgpt"],
   "author": "Mnehmos",
   "license": "Proprietary",
   "dependencies": {
@@ -24,6 +24,7 @@
     "zod-to-json-schema": "^3.23.0"
   },
   "devDependencies": {
+    "@smithery/cli": "^1.4.6",
     "@types/node": "^20.0.0",
     "tsx": "^4.0.0",
     "typescript": "^5.3.0",
