Looking at the extensive changes in this diff, I can see this represents a major milestone in the ChatRPG project with significant tool consolidation, new features, and process improvements.
The most significant change appears to be the tool consolidation from 50 to 35 tools, which is documented in the new ADR-003 file. Combined with the major TDD protocol overhaul and numerous new features implemented, this represents a substantial refactoring and enhancement effort.

refactor: consolidate tools from 50 to 35 via ADR-003

- Consolidate 19 tools through batch patterns, composite tools, and absorption
- Reduce Combat module from 14 to 9 tools (complete implementation)
- Reduce Characters module from 11 to 9 tools (complete implementation)
- Add 4 new composite tools: manage_concentration, manage_aura, manage_location, manage_notes
- Implement TDD workflow with Red→Green→Blue phases
- Add WebSocket support for real-time battlefield broadcasting
- Implement 5e spell slot management with full/half/third caster progression
- Add character deletion, rest mechanics, and level-up systems
- Complete combat lifecycle: create→execute→advance→end with summary
- Update 599 tests passing across 22 test files
- Major documentation overhaul in ORCHESTRATOR_PROMPT.md

BREAKING CHANGE: Tool API consolidation may affect existing integrations

--- a/package.json
+++ b/package.json
@@ -15,17 +15,28 @@
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage"
   },
-  "keywords": ["mcp", "dnd", "5e", "rpg", "llm", "ai", "dm", "chatgpt"],
+  "keywords": [
+    "mcp",
+    "dnd",
+    "5e",
+    "rpg",
+    "llm",
+    "ai",
+    "dm",
+    "chatgpt"
+  ],
   "author": "Mnehmos",
   "license": "Proprietary",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
+    "ws": "^8.18.3",
     "zod": "^3.23.0",
     "zod-to-json-schema": "^3.23.0"
   },
   "devDependencies": {
     "@smithery/cli": "^1.4.6",
     "@types/node": "^20.0.0",
+    "@types/ws": "^8.18.1",
     "tsx": "^4.0.0",
     "typescript": "^5.3.0",
     "vitest": "^2.0.0"
